# Shouf_rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/channel/: handlers.rs  mod.rs  models.rs
src/profile/: handlers.rs  mod.rs  models.rs
